fixing alignments

--- a/css/index.css
+++ b/css/index.css
@@ -666,31 +666,31 @@ a:hover .fa-circle:before{
     cursor:pointer;
 }
 
-@media only screen and (max-width: 768px) {
-  html, body {
-    width: 100%;
-    text-align: center;
-  }
-
-  #intro {
-    width: 100%;
-  }
-
+@media screen and (min-width: 320px) and (max-width: 990px) {
   #content {
-    padding: 20px;
     font-size: 80%;
   }
 
-  #skills {
+  #portfolio {
     width: 100%;
-    height: 100%;
+    text-align: center;
+    font-size: 60%;
   }
 
-  footer {
-    width: 100%;
+  #aboutme{
+    font-size: 80%;
+  }
+
+  #aboutme .img {
+    background-size: 100%;
+  }
+
+  #skills {
+    height: 100%;
   }
 
   .footer {
     text-align: center;
   }
+
 }
